[package]
name = "server-watchbot"
version = "0.1.0"
authors = ["Malte Tammena <malte.tammena@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = { git = 'https://github.com/telegram-rs/telegram-bot' }
futures = "0.3.5"
tokio = { version = "0.2", features = ["full"] }
reqwest = "0.10.8"
rustbreak = { version = "2.0.0", features = ["ron_enc"] }
serde = { version = "1.0.116", features = ["derive"] }
thiserror = "1.0.20"
